--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,500,700,700i,800,900&display=swap" rel="stylesheet">
@@ -223,7 +223,7 @@
                         <div class="header__search">
                             <div class="header__searchInfo">
                                 <input class="header__searchText" type="search" placeholder="Search here...">
-                                <a href="https://www.youtube.com/watch?v=JgXRJ0SOahc"><img class="img__search" src="./img/header__search.png" alt="header__search"></a>
+                                <img class="img__search" src="./img/header__search.png" alt="header__search">
                             </div>
                         </div>
                     </div>
