--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,9 @@
                                <option value="Head">Surgeon</option>
                                <option value="Head">Oculist</option>
                            </select>
+                           <div class="siteForm__dateInput">
                             <input name="Date" class="timepicker" placeholder="Time">
+                           </div>
                         </div>
                     </div>
            
