--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
                     <div class="siteForm__formMain">
                         <div class="siteForm__formLeft">
                             <input type="text" name="Name" class="siteForm__formItem siteForm__formMargin" placeholder="Name" style="border-radius: 6px" required>
-                            <input type="tel" name="Phone" class="siteForm__formItem siteForm__formMargin" placeholder="Phone">
+                            <input type="tel" name="Phone" class="siteForm__formItem siteForm__formMargin" placeholder="Phone" required>
                             <div class="siteForm__dateInput">
                                 <input name="Date" id="datepicker" placeholder="Date" autocomplete="off">
                                 <i class="far fa-calendar-alt"></i>
@@ -1054,7 +1054,7 @@
                        </div>
     
                        <div class="siteForm__formRight form__margin">
-                            <input type="email" name="Email" class="siteForm__formItem siteForm__formMargin" placeholder="Email">
+                            <input type="email" name="Email" class="siteForm__formItem siteForm__formMargin" placeholder="Email" required>
                            <select name="doctor" id="doctor" class="siteForm__formItem siteForm__formMargin">
                                <option value="docMain">Doctor</option>
                                <option value="Cardio">Therapist</option>
